<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fps_needroot">此功能需要ROOT权限</string>
    <string name="fps_message">请先授予root权限，再尝试打开此功能</string>
    <string name="app_name">unicorn</string>
    <string name="config_min_inbound_speed">1</string>
    <string name="config_max_inbound_speed">10000</string>
    <string name="config_def_inbound_speed">100</string>

    <!-- Everything below this line can be translated -->
    <string name="usage_notes">❗ Speed limit is cleared after every reboot.</string>
    <string name="inbound_speed_header">网速限制</string>
    <string name="set_label">限速</string>
    <string name="unset_label">清除</string>
    <string name="inbound_install_succeeded">Limit of %1$s set</string>
    <string name="inbound_uninstall_succeeded">Limit cleared</string>
    <string name="inbound_install_failed">Setting limit NOT supported</string>
    <string name="inbound_uninstall_failed">Clearing limit FAILED</string>

    <string name="setting">Settings</string>
    <string name="exit">Exit</string>
    <string name="cpu_speed_setting_titile">数据采集频率</string>
    <string name="cpu_speed_setting_message">请于下列速率条选择您满意的更新频率，单位为s(注意，设置后数据将清空)</string>

    <string name="start_test">Start Test</string>
    <string name="stop_test">Stop Test</string>

    <string name="collecting_frequency">Collecting Interval(s)</string>
    <string name="sender">Sender:</string>
    <string name="password">Password:</string>
    <string name="smtp">SMTP Server:</string>
    <string name="receiver">Receivers(separated by space):</string>
    <string name="floating_window">Show Floating Window</string>
    <string name="save">Save</string>

    <string name="calculating">Calculating...</string>
    <string name="open_wifi">WIFI Off</string>
    <string name="close_wifi">WIFI On</string>
    <string name="process_free_mem">App/Available Memory:</string>
    <string name="process_overall_cpu">App/System CPU:</string>
    <string name="start_time">Start Time:</string>
    <string name="total_usage">\u0020Total Usage(%)</string>
    <string name="process_package">Package Name</string>
    <string name="process_name">App Name</string>
    <string name="process_pid">App PID</string>
    <string name="mem_size">Device Memory Size(MB)</string>
    <string name="cpu_type">Device CPU Type</string>
    <string name="android_system_version">Android Version</string>
    <string name="mobile_type">Device Brand/Model</string>
    <string name="timestamp">Timestamp</string>
    <string name="used_mem_PSS">App Used Memory PSS(MB)</string>
    <string name="used_mem_ratio">App Used Memory(%)</string>
    <string name="mobile_free_mem">System Available Memory(MB)</string>
    <string name="app_used_cpu_ratio">App Used CPU(%)</string>
    <string name="total_used_cpu_ratio">Total Used CPU(%)</string>
    <string name="traffic">Net Traffic(KB)</string>
    <string name="battery">Battery(%)</string>
    <string name="current">Current(mA)</string>
    <string name="temperature">Temperature(C)</string>
    <string name="voltage">Voltage(V)</string>
    <string name="fps">FPS</string>
    <string name="stat_error">Stat Error</string>

    <string name="comment1">Note: for unsupported devices refer to: https://github.com/NetEase/Emmagee/wiki/Some-devices-are-not-supported</string>
    <string name="comment2">Current: negative for discharging while positive for charging</string>
    <string name="comment3">Start time: empty means either the app has been started or failed to fetch start time</string>
    <string name="comment4">N/A: not supported or data exception</string>

    <string name="can_not_start_app_toast">The app can not be launched</string>
    <string name="choose_app_toast">Please select target app</string>
    <string name="test_result_file_toast">Test result file:</string>
    <string name="save_success_toast">Saved</string>
    <string name="sender_mail_toast">Sender\'s email:</string>
    <string name="receiver_mail_toast">Receiver\'s email:</string>
    <string name="format_incorrect_format">Invalid email format</string>
    <string name="info_incomplete_toast">Incomplete email settings</string>
    <string name="wifi_fail_toast">Failed to set WIFI</string>
    <string name="send_success_toast">Test result has been sent to:</string>
    <string name="send_fail_toast">Test result failed to be sent to your mailbox, saved at:</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Are you sure to exit？</string>
    <string name="quite_alert">Click again to exit</string>

    <string name="about">About</string>
    <string name="mail_settings">Mail Settings</string>
    <string name="version_title">Version </string>
    <string name="about_emmagee_intro">Emmagee is a practical, handy performance test tool for specified
         Android App, which can monitor CPU, memory, network traffic, battery current and status. 
         Additionally, it also provides several cool features such as customizing interval of collecting
         data, rendering real-time process status in a floating window, and much more.</string>
    <string name="about_team">Team：QA, Netease(Hangzhou)</string>
    <string name="about_project_address">Project Site：https://github.com/NetEase/Emmagee</string>

    <string name="top_activity">Top Activity Name</string>
    <string name="csv_encoding">UTF-8</string>
    <string name="dalvik_heap">Dalvik heap alloc/size(KB)</string>
    <string name="native_heap">Native heap alloc/size(KB)</string>

    <string name="collect_heap">Collect Heap</string>
    <string name="root_notification">(root is necessary)</string>
    <string name="root_failed_notification">Fail to get root permission, please check if this phone is rooted</string>
    <string name="stop_when_exited">Stop monitoring when app exited</string>


    <string name="appearance">Appearance</string>
    <string name="filters">Filters</string>
    <string name="Save_logs">Save logs</string>
    <string name="text_opacity">Text Opacity</string>
    <string name="background_opacity">Background Opacity</string>
    <string name="text_size">Text Size</string>
    <string name="auto_filter">Auto Filter</string>
    <string name="log_level">Log Level</string>
    <string name="tag_filter">Tag Filter</string>
    <string name="key_filter">Key Filter</string>
    <string name="app_filter">App Filter</string>
    <string name="no_filter">No Filter</string>
    <string name="off">Off</string>
    <string name="none">None</string>

    <string name="add_tag_filter">Add Tag Filter</string>
    <string name="add_key_filter">Add Key Filter</string>
    <string name="new_tag_filter">New Tag Filter</string>
    <string name="new_key_filter">New key Filter</string>
    <string name="enter_log_tag">Enter log tag</string>
    <string name="enter_log_key">Enter log key</string>
    <string name="delete">Delete</string>
    <string name="_selected">" selected"</string>
    <string name="toast_no_root">Failed to obtain root access</string>
    <string name="github">GitHub</string>
    <string name="no_root">No Root Access</string>
    <string name="no_save_log">No  Save log</string>
    <string name="repo_url">https://github.com/jgilfelt/GhostLog</string>
    <string name="no_root_dialog">Ghost Log requires device root privileges to read system logs. </string>
    <string name="canned_integration_log_line">I GhostLog: Running in no root Mode</string>
    <string name="no_logs_saved">未保存日志</string>
    <string name="permission_read_logs_label">read logcat output for Ghost Log integrated apps</string>
    <string name="permission_read_logs_description">Allows an application to read the logcat output for Ghost Log integrated apps. This allows it to discover general information about integrated apps that is being written to the log.</string>

    <string name="seed">seed</string>
    <string name="level">level</string>
    <string name="throttle">throttle</string>
    <string name="count">count</string>
    <string name="touch">pct-touch</string>
    <string name="security">security</string>
    <string name="crashes">crashes</string>
    <string name="timeouts">timeouts</string>

    <string-array name="levels_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="levels_entries">
        <item>Verbose</item>
        <item>Debug</item>
        <item>Info</item>
        <item>Warn</item>
        <item>Error</item>
        <item>Assert</item>
    </string-array>
</resources>
