<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/title_bar" />
    <TextView
        android:id="@+id/usage_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/usage_notes"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#ffffff"
        tools:context="com.oxplot.bradybound.ControlPanelActivity" >

        <TextView
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:id="@+id/inbound_speed_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/inbound_speed_header"
            android:textAllCaps="true"
            />

        <TextView
            android:id="@+id/inbound_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/inbound_speed_header"
            android:layout_alignBottom="@+id/inbound_speed_header"
            android:layout_alignParentRight="true"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/speed_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/inbound_speed_header"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <View
            android:id="@+id/hbar"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_above="@+id/button_bar"
            android:layout_alignRight="@+id/speed_seekbar"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:id="@+id/button_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:weightSum="1.0" >

            <Button
                android:id="@+id/set_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/set_label" />

            <View
                android:id="@+id/vbar"
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dip"
                android:layout_marginTop="4dip"
                android:background="?android:attr/dividerVertical" />

            <Button
                android:id="@+id/unset_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/unset_label" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>